[package]
name = "palpngrs"
version = "0.2.0"
edition = "2024"
authors = ["Johan Sjöblom <sjoblom.johan@gmail.com>"]
description = "Rust library for converting between Palettized images and PNGs."
license = "MIT"
repository = "https://github.com/sjoblomj/palpngrs"
readme = "README.md"
categories = ["graphics", "multimedia::encoding"]
keywords = ["graphics"]

[dependencies]
image = "0.25.6"     # For image manipulation (PNG handling)
once_cell = "1.21.3" # For caching for performance improvements - not needed for functionality as such
log = "0.4.27"
